Fixed a whoops to do with collapsables.

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -238,7 +238,7 @@ section {
 	margin-bottom:0 !important
 }
 .ui-show {
-	max-height: 900px;
+	max-height: 1200px;
 	overflow: hidden;
 	transition: 0.3s ease-in all;
 	-webkit-transition: 0.3s ease-in all;
@@ -342,7 +342,7 @@ section {
 	}
 }
 
-.nav-list {
+.scrollable {
 	overflow: scroll !important;
 	max-height: 400px !important;
 	}
